--- a/thursday.html
+++ b/thursday.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head>THE START UP</head>
+<head>
+
+    <link ref="stylesheet" href="thursday.css">
+</head>
 <body>
 <h1>TODAY I START GIT</h1>
 
@@ -10,4 +13,4 @@
 <hr>
 <p>Nothing is impossible under the sun as long as there is<br><b><i>hardwork and determination.</i><b/>
 
-<p style="background-color:redorange;><b><i> REMEMBER ITS JUST A MATTER OF TIME<i><b></p style-"background-color:redorange;>
+<p style="background-color:redorange;><b><i>  REMEMBER ITS JUST A MATTER OF TIME<i><b></p style-"background-color:redorange;>
