--- a/thursday.html
+++ b/thursday.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-    <link ref="stylesheet" href="thursday.css">
+    <link ref="stylesheet" href= "thursday.css"
 </head>
 <body>
 <h1>TODAY I START GIT</h1>
@@ -13,4 +13,4 @@
 <hr>
 <p>Nothing is impossible under the sun as long as there is<br><b><i>hardwork and determination.</i><b/>
 
-<p style="background-color:redorange;><b><i>  REMEMBER ITS JUST A MATTER OF TIME<i><b></p style-"background-color:redorange;>
+<p style="color:redorange;""><b><i>  REMEMBER ITS JUST A MATTER OF TIME<i><b></p style-"background-color:redorange;>
