--- a/thursday.html
+++ b/thursday.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-    <link ref="stylesheet" href= "thursday.css"
+    <link rel="stylesheet" href= "thursday.css"
 
 </head>
 <body>
