--- a/thursday.html
+++ b/thursday.html
@@ -13,5 +13,6 @@
 <p> I am looking forward towards gaining as much experience as possible through studies and research not forgetting the most important which is through practicals so thst I can have my skills in handy</p>
 <hr>
 <p>Nothing is impossible under the sun as long as there is<br><b><i>hardwork and determination.</i><b/>
-
+    <img src= "https://www.google.com/imgres?imgurl=https%3A%2F%2Fcdn.hashnode.com%2Fres%2Fhashnode%2Fimage%2Fupload%2Fv1575354026303%2F3vWLFFLe1.png%3Fauto%3Dformat%26q%3D60&imgrefurl=https%3A%2F%2Fwww.freecodecamp.org%2Fnews%2Flearn-git-and-version-control-in-an-hour%2F&tbnid=8pYZvfP9eg5j2M&vet=12ahUKEwiLov-9moX6AhWBQEEAHQ2PATEQMygKegUIARDcAQ..i&docid=f2x38oiSUODR7M&w=522&h=263&q=images%20of%20git%20codes&ved=2ahUKEwiLov-9moX6AhWBQEEAHQ2PATEQMygKegUIARDcAQ"
+ alt= "image of Git codes" width="104" height="142"
 <p style="color:redorange;""><b><i>  REMEMBER ITS JUST A MATTER OF TIME<i><b></p style-"color:redorange;>
