--- a/thursday.html
+++ b/thursday.html
@@ -13,7 +13,9 @@
 <p> I am looking forward towards gaining as much experience as possible through studies and research not forgetting the most important which is through practicals so thst I can have my skills in handy</p>
 <hr>
 <p>Nothing is impossible under the sun as long as there is<br><b><i>hardwork and determination.</i><b/>
-    <img src= "https://cdn.hashnode.com/res/hashnode/image/upload/v1575354026303/3vWLFFLe1.png?auto=format&q=60" alt= "image of Git codes" width="140" height="180"
+    <hr>
+
+    <img src= "https://cdn.hashnode.com/res/hashnode/image/upload/v1575354026303/3vWLFFLe1.png?auto=format&q=60" alt= "image of Git codes" width="100%" height="100%"
 <hr>
 
-<p style="color:redorange;"><b><i>  REMEMBER ITS JUST A MATTER OF TIME<</i></b></p>
+<p style="color:red orange;"><b><i>  REMEMBER ITS JUST A MATTER OF TIME</i></b></p style="color:red orange;">
